# highpaws

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  auth.py  forms.py  models.py  views.py
src/static/CSS/: main.css
src/templates/: base.html  home.html  index.html  login.html  posts.html  register.html
